@@ -192,8 +192,8 @@
       <attribute name="toolTip">
        <string>Options</string>
       </attribute>
-      <layout class="QVBoxLayout">
-       <item>
+      <layout class="QGridLayout">
+       <item row="0" column="0" colspan="3">
         <widget class="QCheckBox" name="UseNativeDialogsCheckBox">
          <property name="toolTip">
           <string>Whether to use desktop environment's native dialogs where applicable</string>
@@ -203,7 +203,51 @@
          </property>
         </widget>
        </item>
-       <item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="CustomStyleThemeTextLabel">
+         <property name="text">
+          <string>Custom &amp;style theme:</string>
+         </property>
+         <property name="buddy">
+          <cstring>CustomStyleThemeComboBox</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="CustomStyleThemeComboBox">
+         <property name="font">
+          <font>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="toolTip">
+          <string>Custom widget style theme</string>
+         </property>
+         <property name="editable">
+          <bool>false</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>(default)</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" colspan="3">
         <spacer>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -244,6 +288,7 @@
   <tabstop>ProgramsDeleteToolButton</tabstop>
   <tabstop>ProgramsTreeWidget</tabstop>
   <tabstop>UseNativeDialogsCheckBox</tabstop>
+  <tabstop>CustomStyleThemeComboBox</tabstop>
   <tabstop>DialogButtonBox</tabstop>
  </tabstops>
  <resources>
